--- a/css/style.css
+++ b/css/style.css
@@ -221,8 +221,6 @@ h4 {
 }
 
 .card__img {
-    width: 100%;
-    height: 200%;
     object-fit: cover;
     transform: translateY(5rem);
 }
@@ -483,10 +481,11 @@ h4 {
 .container {
     float: left;
     height: 500px;
-    width: 1500px;
+    width: 2000px;
     position: relative;
     display: flex;
     justify-content: space-between;
+    padding-right: 30%;
 
 }
 
@@ -522,6 +521,10 @@ h4 {
 
 .container .card:nth-child(4) .icon {
     background: #fcf56a;
+}.
+
+ container .card:nth-child(4) .icon {
+    background: #7d6afc;
 }
 
 
@@ -545,7 +548,7 @@ h4 {
 
 .container .card .face.face1 {
     position: relative;
-    background: #333;
+    background: #ab2626;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -571,9 +574,21 @@ h4 {
     max-width: 100px;
 }
 
-.container .card .face.face2 {
+.container .card .face.face2{
     position: relative;
-    background: #ecb5d0;
+    background: #f54b4b;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+    box-sizing: border-box;
+    box-shadow: 0 20px 50px rgba(0,0,0,0.8);
+    transform: translateY(-100px);
+}
+
+.faceGrp {
+    position: relative;
+    background: #985bc0;
     display: flex;
     justify-content: center;
     align-items: center;
