--- a/css/style.css
+++ b/css/style.css
@@ -43,7 +43,7 @@ body {
 }
 
 .sectionProducts {
-    padding: 18rem 3rem;
+    padding: 20rem 3rem;
     /*border-top: 1px solid #022539;*/
     background: linear-gradient(125deg,  #022539, #0f3b56, #5d5a2c);
 
@@ -60,8 +60,8 @@ body {
     overflow-y: scroll;
 }
 
-.sectionScrolling {
-    padding: 30rem 3rem;
+.sectionLocations {
+    padding: 22rem 3rem;
     /*border-top: 1px solid #022539;*/
     background: linear-gradient(45deg, #b78f46, #6e5f98);
 
@@ -95,6 +95,15 @@ body {
     color: #f1deba;
 }
 
+.section__header__Footer {
+    font-size: 2rem;
+    line-height: 1.3;
+    font-weight: 500;
+    color: #f1c8c7;
+    text-align: center;
+    padding-bottom: 50px;
+}
+
 .btn {
     display: inline-block;
     background-color:#022539;
@@ -111,6 +120,21 @@ body {
 .btnK {
     display: inline-block;
     background-color: #ebf506;
+    font-size: 1.6rem;
+    font-family: inherit;
+    font-weight: 500;
+    border: none;
+    margin-top: 120px;
+    padding: 2.3rem 1.5rem;
+    border-radius: 10rem;
+    cursor: pointer;
+    transition: all 0.3s;
+    align-content: center;
+}
+
+.btnL {
+    display: inline-block;
+    background-color: #cc7d7d;
     font-size: 1.6rem;
     font-family: inherit;
     font-weight: 500;
@@ -410,9 +434,11 @@ h4 {
 }
 
 .footer__link {
-    font-size: 1.6rem;
-    color: #eee;
+    font-size: 2.6rem;
+    color: #ea9999;
     text-decoration: none;
+    text-align: center;
+    padding-bottom: 20px;
 }
 
 .footer__logo {
@@ -427,6 +453,7 @@ h4 {
     font-size: 1.4rem;
     color: #aaa;
     text-align: center;
+    padding-top: 20px;
 }
 
 .footer__copyright .footer__link {
@@ -620,7 +647,7 @@ h4 {
 
 .container .card .face.face2{
     position: relative;
-    background: #FB991C;
+    background: #f6aa4a;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -655,5 +682,7 @@ h4 {
     text-decoration: none;
     color: #414141;
 }
+
+
 
 
