Moved .bntK and .btnL more to the center

--- a/css/productsPageStyle.css
+++ b/css/productsPageStyle.css
@@ -646,6 +646,7 @@ h4 {
 }
 
 .products_box {
+    background-color: #9be15d;
     overflow-y: scroll;
     padding-right: 1rem;
     scroll-behavior: smooth;
