Mubbi: Tried to put the footer in the products page, but when the products are loaded from the database the footer overlays. I also added the links to the nav bar.

--- a/css/productsPageStyle.css
+++ b/css/productsPageStyle.css
@@ -339,9 +339,13 @@ h4 {
 
 /* FOOTER */
 .footer {
+
     padding: 3rem 3rem;
     background-color: rgba(17, 55, 77, 0.53);
     display: flex;
+    position: fixed;
+    bottom: 1px;
+    width: 100%;
 
 }
 
