--- a/css/productPopUpStyle.css
+++ b/css/productPopUpStyle.css
@@ -1,20 +1,50 @@
 
+.products_popup_bigbox {
+    border-radius: 25px; /* rounds the edges*/
+    width: 50%;
+    padding: 20px;
+    margin: auto;
+    position: absolute;
+    left: 30%;
+    top: 25%;
+    line-height: 1.5;
+    display: block;
+    vertical-align: middle;
+    z-index: +2;
+}
+
+.product_popup_smallbox {
+    background: pink;
+    height: 500px;
+    width: 300px;
+    display: grid;
+    grid-gap: 0;
+    grid-template-columns: repeat(2, 1fr);
+}
 
 
+.image_column {
+    width: 300px;
+    height: 500px;
+    background-repeat: no-repeat;
+}
 
-.popupbox{
-    background-color: lightblue;
-    border-radius: 2rem;
-    color: black;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 60vw;
+.description_column {
+    padding: 20px;
+    height: 460px;
+    width: 500px;
+    background: pink;
+    font-weight: bold;
+    font-size: medium;
+    overflow-y: auto;
+}
 
-    height: 35vw;
-    min-height: 30rem;
-    min-width: 55rem;
-    padding: 3rem;
-    margin: 0 auto;
+.closebtn {
+    text-align: right;
+    background-repeat: no-repeat;
+}
+
+.closebutton {
+    height: 10px;
+    width: 10px;
 }
