Created registration form, adjusted it to login form

--- a/css/registration.css
+++ b/css/registration.css
@@ -125,10 +125,10 @@ label span {
     right: 28px;
 }
 
-.dnthave {
+.doeshave {
     position: absolute;
     top: 92%;
-    left: 31%;
+    left: 28%;
     color: #ffffff;
 }
 
