--- a/css/products.css
+++ b/css/products.css
@@ -1,30 +1,21 @@
+.productBackground {
+    /*background: linear-gradient(0deg, rgba(252,151,33,1) 0%, rgba(2,37,57,1) 80%, rgba(2,37,57,1) 100%);*/
+    /*background-repeat: unset;*/
+}
+
 .product-header {
     padding: 0 3rem;
     height: 10rem;
     display: flex;
     flex-direction: column;
     align-items: center;
+    background-color: var(--header-color);
 }
 
-.section__description {
-    font-size: 1.8rem;
-    font-weight: 600;
-    text-transform: uppercase;
-    color: var(--color-primary);
-    margin-bottom: 1rem;
-}
-
-.product_container{
-
-    width: 60vw;
-    height: 35vw;
-    min-height: 100rem;
-    min-width: 50rem;
-    padding: 3rem;
-    margin: 0 auto;
-    font-weight: bold;
-
+.products_box {
     display: grid;
+    grid-gap: 4rem;
+    grid-template-columns: repeat(2, 1fr);
     justify-content: center;
 
 }
@@ -40,14 +31,6 @@
     transform: scale(1.11);
 }
 
-.products_box {
-    display: grid;
-    grid-gap: 4rem;
-    grid-template-columns: repeat(2, 1fr);
-    justify-content: center;
-
-}
-
 .footer-product {
     position: relative;
     left: 0;
@@ -57,13 +40,14 @@
     color: #78797d;
     font-size: 14px;
     text-align: center;
+    background-color: rgba(2,37,57,1)
 }
 
 .footer-login .fa {
-    color: #7f5feb;;
+    color: #7f5feb;
 }
 
-.container{
+.container {
     width: 100%;
     height: 100vh;
     background: pink;
