--- a/css/productPopUpStyle.css
+++ b/css/productPopUpStyle.css
@@ -60,3 +60,19 @@
     height: 10px;
     width: 10px;
 }
+
+.addProducts_popup_bigbox {
+    border-radius: 25px;
+    width: 50%;
+    padding: 20px;
+    margin: auto;
+    position: fixed;
+    left: 30%;
+    top: 0%;
+    line-height: 1.5;
+    display: block;
+    vertical-align: middle;
+    min-height: 100vh;
+    z-index: +2;
+
+}
