--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,3 @@
-/* The page is NOT responsive. You can implement responsiveness yourself if you wanna have some fun 😃 */
-
 :root {
     --color-primary: #fc9721;
     --color-secondary: #ffcb03;
@@ -36,7 +34,7 @@ body {
 
 /* GENERAL ELEMENTS */
 .section {
-    padding: 16rem 3rem;
+    padding: 18rem 3rem;
     /*border-top: 1px solid #022539;*/
 
     transition: transform 1s, opacity 1s;
@@ -44,7 +42,7 @@ body {
 }
 
 .sectionProducts {
-    padding: 12rem 3rem;
+    padding: 20rem 3rem;
     /*border-top: 1px solid #022539;*/
     background: linear-gradient(  #022539, #0f3b56,  #46b7a1);
 
@@ -53,7 +51,7 @@ body {
 }
 
 .sectionAbout {
-    padding: 20rem 3rem;
+    padding: 22rem 3rem;
     /*border-top: 1px solid #022539;*/
     background: linear-gradient( #46b7a1, #6e5f98);
 
@@ -87,7 +85,6 @@ body {
     color: var(--color-primary);
     margin-bottom: 1rem;
     text-align: center;
-
 }
 
 .section__header {
@@ -132,7 +129,7 @@ body {
     cursor: pointer;
     transition: all 0.3s;
     align-content: center;
-    margin-left: 37.5rem;
+    margin-left: 35rem;
 }
 
 .btnL {
@@ -148,7 +145,7 @@ body {
     cursor: pointer;
     transition: all 0.3s;
     align-content: center;
-    margin-left: 37.5rem;
+    margin-left: 35rem;
 }
 
 .btn:hover {
@@ -257,7 +254,7 @@ i {
 /* HEADER */
 .header {
     padding: 0 3rem;
-    height: 100vh;
+    height: 200vh;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -560,7 +557,7 @@ h4 {
     font-weight: 400;
 }
 
-    /* CARD STYLE */
+/* CARD STYLE */
 
 .container {
     float: left;
@@ -608,8 +605,8 @@ h4 {
 }.
 
  container .card:nth-child(4) .icon {
-    background: #7d6afc;
-}
+     background: #7d6afc;
+ }
 
 
 .container .card .icon .fa {
@@ -698,24 +695,19 @@ h4 {
 /* PRODUCTS SECTION*/
 
 .product_container{
-
     width: 30vw;
-
-    height: 35vw;
-    min-height: 50rem;
+    min-height: 100rem;
     min-width: 50rem;
-    padding-left: 170px;
+    padding: 3rem;
     margin: 0 auto;
     font-weight: bold;
-
-
     display: grid;
     justify-content: center;
 
 }
 
 .products {
-    height: 30rem;
+    height: 20rem;
     width: 30rem;
     transition: transform .6s;
 }
@@ -728,8 +720,17 @@ h4 {
     display: grid;
     grid-gap: 4rem;
     grid-template-columns: repeat(5, 1fr);
-    position: center;
+    justify-content: center;
 }
+
+
+
+
+
+
+
+
+
 
 
 
