--- a/css/productPopUpStyle.css
+++ b/css/productPopUpStyle.css
@@ -1,3 +1,9 @@
+.center-screen {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
 
 .products_popup_bigbox {
     border-radius: 25px;
@@ -12,15 +18,6 @@
     vertical-align: middle;
     min-height: 100vh;
     z-index: +2;
-
-}
-
-.center-screen {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-
 }
 
 .product_popup_smallbox {
@@ -48,12 +45,11 @@
     font-weight: bold;
     font-size: medium;
     overflow-y: auto;
-    border-radius:0 25px 25px 0;
+    border-radius: 0 25px 25px 0;
 }
 
 .closebtn {
     text-align: right;
-    background-repeat: no-repeat;
 }
 
 .closebutton {
@@ -67,12 +63,55 @@
     padding: 20px;
     margin: auto;
     position: fixed;
-    left: 30%;
-    top: 0%;
+    left: 40%;
+    top: 0;
     line-height: 1.5;
     display: block;
     vertical-align: middle;
     min-height: 100vh;
     z-index: +2;
+}
 
+.twoButtons {
+    text-align: right;
+}
+
+.editButton {
+    display: inline-block;
+    padding: 15px 25px;
+    font-size: 24px;
+    cursor: pointer;
+    text-align: center;
+    text-decoration: none;
+    outline: none;
+    color: #fff;
+    background-color: #4CAF50;
+    border: none;
+    border-radius: 15px;
+    box-shadow: 0 9px #999;
+}
+
+.deleteButton {
+    display: inline-block;
+    padding: 15px 25px;
+    font-size: 24px;
+    cursor: pointer;
+    text-align: center;
+    text-decoration: none;
+    outline: none;
+    color: #fff;
+    background-color: #e10a0a;
+    border: none;
+    border-radius: 15px;
+    box-shadow: 0 9px #999;
+}
+
+.deleteButton:hover {
+    background-color: #b70c0c
+}
+
+.deleteButton:active {
+    background-color: #b70c0c;
+    box-shadow: 0 5px #666;
+    transform: translateY(4px);
 }
