--- a/css/productPopUpStyle.css
+++ b/css/productPopUpStyle.css
@@ -11,13 +11,14 @@
     padding: 20px;
     margin: auto;
     position: fixed;
-    left: 30%;
+    left: 28%;
     top: 25%;
     line-height: 1.5;
     display: block;
     vertical-align: middle;
     min-height: 100vh;
     z-index: +2;
+
 }
 
 .product_popup_smallbox {
@@ -73,7 +74,9 @@
 }
 
 .twoButtons {
-    text-align: right;
+    text-align: center;
+    padding-top: 40px;
+    justify-content: center;
 }
 
 .editButton {
@@ -88,7 +91,14 @@
     background-color: #4CAF50;
     border: none;
     border-radius: 15px;
-    box-shadow: 0 9px #999;
+}
+
+.editButton:hover {
+    background-color: #3da942;
+}
+
+.editButton:active {
+    transform: translateY(4px);
 }
 
 .deleteButton {
@@ -103,7 +113,7 @@
     background-color: #e10a0a;
     border: none;
     border-radius: 15px;
-    box-shadow: 0 9px #999;
+
 }
 
 .deleteButton:hover {
@@ -111,7 +121,50 @@
 }
 
 .deleteButton:active {
-    background-color: #b70c0c;
-    box-shadow: 0 5px #666;
     transform: translateY(4px);
+}
+
+.editProductBox {
+    font-size: medium;
+    border-radius: 25px;
+    border: black 50px;
+    background: pink;
+    padding: 20px;
+    margin: 40px;
+    min-height: 50%;
+    min-width: 30%;
+    text-align: center;
+    position: fixed;
+    left: 33%;
+    top: 25%;
+    line-height: 2;
+    display: block;
+    vertical-align: middle;
+    z-index: +3;
+
+}
+
+.editProductBox textarea {
+    resize: none;
+    width: 400px;
+    height: 200px;
+}
+
+.deleteWarningBox {
+    font-size: medium;
+    border-radius: 25px;
+    border: 2px solid black;
+    background-color: #12d2e3;
+    padding: 20px;
+    margin: 40px;
+    min-height: 30%;
+    min-width: 30%;
+    text-align: center;
+    position: fixed;
+    left: 33%;
+    top: 25%;
+    line-height: 1.5;
+    display: block;
+    vertical-align: middle;
+    z-index: +4;
 }
