--- a/css/products.css
+++ b/css/products.css
@@ -24,11 +24,14 @@
     height: 50rem;
     width: 30rem;
     transition: transform .6s;
+
     border-radius: 25px;
 }
 
 .products:hover {
     transform: scale(1.11);
+    border: 2px solid black;
+
 }
 
 .addProduct {
