Position of navbar is fixed and kalle_logo moved a bit down

--- a/css/style.css
+++ b/css/style.css
@@ -186,15 +186,17 @@ img {
 /* NAVIGATION */
 .nav {
     display: flex;
+    position: fixed;
+    background-color: #022539;
     justify-content: space-between;
     align-items: center;
-    height: 9rem;
+    height: 6rem;
     width: 100%;
     padding: 0 6rem;
     z-index: 100;
 }
 
-/* nav and stickly class at the same time */
+/* nav and sticky class at the same time */
 .nav.sticky {
     position: fixed;
     background-color: rgba(255, 255, 255, 0.95);
