--- a/css/main-page.css
+++ b/css/main-page.css
@@ -9,7 +9,6 @@
     margin: 0 auto;
     font-weight: bold;
 
-
     display: grid;
     justify-content: center;
 
@@ -40,6 +39,11 @@
     flex-direction: column;
     align-items: center;
 }
+
+.kalle_logo{
+    margin-top: 5rem;
+}
+
 .btnK {
     display: inline-block;
     background-color: #ebf506;
