--- a/css/style.css
+++ b/css/style.css
@@ -92,6 +92,7 @@ body {
     line-height: 1.3;
     font-weight: 500;
     color: #f1deba;
+    text-align: center;
 }
 
 .section__header__Footer {
