--- a/css/aboutKalle.css
+++ b/css/aboutKalle.css
@@ -14,7 +14,7 @@ body{
 }
 
 .sectionKalle {
-    padding: 30rem 3rem;
+    padding: 18rem 3rem;
     /*border-top: 1px solid #022539;*/
     transition: transform 1s, opacity 1s;
     overflow-y: scroll;
@@ -70,13 +70,13 @@ body{
 #twitter,
 #github,
 #facebook {
-    font-size: 2em;
+    font-size: 1em;
     background-color: transparent;
     color: #fff;
 
     border-radius: 29px;
     padding: 11px 19px;
-    margin: 0 40px;
+    margin: 5px;
     animation: animate 3s linear infinite;
     text-shadow: 0 0 10px #0072ff, 0 0 20px #ffcc00, 0 0 30px #0072ff,
     0 0 40px #0072ff;
