--- a/css/aboutKombucha.css
+++ b/css/aboutKombucha.css
@@ -4,17 +4,17 @@ body{
     --x: calc(var(--posX, 0) * 1px);
     --y: calc(var(--posY, 0) * 1px);
     background-image:
-            linear-gradient(115deg, rgb(211 255 215), rgb(0 0 0)),
-            radial-gradient( 90% 100% at calc( 50% + var(--x)) calc( 0% + var(--y)), rgb(200 200 200), rgb(022 000 045)),
-            radial-gradient(100% 100% at calc( 80% - var(--x)) calc( 0% - var(--y)), rgb(234, 238, 150), rgb(37, 70, 154)),
-            radial-gradient(150% 210% at calc(100% + var(--x)) calc( 0% + var(--y)), rgb(020 175 125), rgb(000 010 255)),
-            radial-gradient(100% 100% at calc(100% - var(--x)) calc(30% - var(--y)), rgb(255 077 000), rgb(000 200 255)),
-            linear-gradient(60deg, rgb(255 000 000), rgb(120 086 255));
+            linear-gradient(115deg, rgb(152, 103, 103), rgb(245, 176, 176)),
+            radial-gradient( 90% 100% at calc( 50% + var(--x)) calc( 0% + var(--y)), rgb(200 200 200), rgb(201, 170, 234)),
+            radial-gradient(100% 100% at calc( 80% - var(--x)) calc( 0% - var(--y)), rgb(236, 226, 127), rgb(150, 108, 130)),
+            radial-gradient(150% 210% at calc(100% + var(--x)) calc( 0% + var(--y)), rgb(196, 107, 107), rgb(187, 142, 104)),
+            radial-gradient(100% 100% at calc(100% - var(--x)) calc(30% - var(--y)), rgb(234, 141, 101), rgb(238, 206, 146)),
+            linear-gradient(60deg, rgb(245, 131, 131), rgb(246, 204, 182));
     background-blend-mode: overlay, overlay, difference, difference, difference, normal;
 }
 
 .sectionKalle {
-    padding: 18rem 3rem;
+    padding: 15rem 3rem;
     /*border-top: 1px solid #022539;*/
     transition: transform 1s, opacity 1s;
     overflow-y: scroll;
@@ -100,44 +100,23 @@ body{
     }
 }
 
-/* --- IMAGE STUFF ---*/
-
-img.frame {
-    border-image: url('//s3-us-west-2.amazonaws.com/s.cdpn.io/4273/frame.png') 93 92 87 92 stretch stretch;
-    border-color: #f4be52;
-    border-style: inset;
-    border-width: 60px;
-    display: block;
-    width: 40%;
-    height: auto;
-    background-color: #ffe;
-    margin: 0 auto;
-}
-@media all and (max-width: 500px) {
-    img.frame {
-        border-width: 0px;
-        width: 100%; }
-}
-
-
 #frame{
     position:relative;
     padding:0;
-    margin:0;
-    border:solid 15px #555;
+    border:solid 15px #444444;
     max-width:600px;
     margin:40px auto;
-    box-shadow:-3px -3px 12px #999;
+    box-shadow:-3px -3px 12px #2c2b2b;
 
 }
 #border{
     position:relative;
     padding:0;
     margin:0;
-    border:solid 70px white;
-    box-shadow:-3px -3px 12px #999;
+    border:solid 70px #f1e2e2;
+    box-shadow:-3px -3px 12px #818181;
 }
-img2{
+img{
     display:block;
     padding:0;
     margin:0;
