--- a/css/locations.css
+++ b/css/locations.css
@@ -4,36 +4,52 @@ body{
     --x: calc(var(--posX, 0) * 1px);
     --y: calc(var(--posY, 0) * 1px);
     background-image:
-            linear-gradient(115deg, rgb(225, 157, 187), rgb(117, 44, 44)),
-            radial-gradient( 90% 100% at calc( 50% + var(--x)) calc( 0% + var(--y)), rgb(124, 9, 9), rgb(159, 125, 86)),
-            radial-gradient(100% 100% at calc( 80% - var(--x)) calc( 0% - var(--y)), rgb(236, 226, 127), rgb(117, 6, 6)),
-            radial-gradient(150% 210% at calc(100% + var(--x)) calc( 0% + var(--y)), rgb(196, 107, 107), rgb(187, 133, 104)),
-            radial-gradient(100% 100% at calc(100% - var(--x)) calc(30% - var(--y)), rgb(234, 141, 101), rgb(189, 121, 109)),
-            linear-gradient(60deg, rgb(245, 131, 131), rgb(246, 204, 182));
+            linear-gradient(35deg, rgba(176, 205, 243, 0.63), rgba(168, 161, 79, 0.63)),
+            radial-gradient( 90% 100% at calc( 50% + var(--x)) calc( 0% + var(--y)), rgb(86, 99, 133), rgb(164, 147, 92)),
+            radial-gradient(100% 100% at calc( 80% - var(--x)) calc( 0% - var(--y)), rgb(148, 133, 85), rgb(169, 156, 90)),
+            radial-gradient(150% 210% at calc(100% + var(--x)) calc( 0% + var(--y)), rgb(82, 110, 152), rgb(150, 157, 87)),
+            radial-gradient(100% 100% at calc(100% - var(--x)) calc(30% - var(--y)), rgb(88, 111, 161), rgb(213, 205, 116)),
+            linear-gradient(60deg, rgb(100, 141, 182), rgb(159, 146, 81));
     background-blend-mode: overlay, overlay, difference, difference, difference, normal;
 }
 
+h2{
+    color: whitesmoke;
+    text-align: center;
+    font-size: 2.5rem;
+}
 
-.sectionKalle {
-    padding: 18rem 3rem;
+h3{
+    color: #bdb5b5;
+    text-align: center;
+    font-size: 1.5rem;
+}
+
+
+
+
+.sectionLoc {
+    padding: 13rem 3rem;
     /*border-top: 1px solid #022539;*/
     transition: transform 1s, opacity 1s;
     overflow-y: scroll;
+
+
 }
 
-.headerK {
+.headerL {
     padding: 0 3rem;
     height: 0vh;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
-.section__titleK {
+.section__titleL {
     max-width: 400rem;
     margin: 0 auto 8rem auto;
 }
 
-.section__descriptionK {
+.section__descriptionL {
     font-size: 5.8rem;
     font-weight: 600;
     text-transform: uppercase;
@@ -42,7 +58,7 @@ body{
     text-align: center;
 }
 
-.section__headerK {
+.section__headerL {
     font-size: 4rem;
     line-height: 1.3;
     font-weight: 500;
@@ -50,7 +66,7 @@ body{
     text-align: center;
 }
 
-.footerK {
+.footerL {
     padding: 3rem 3rem;
     background-color: transparent;
     display: flex;
@@ -101,7 +117,8 @@ body{
     }
 }
 
-/* --- IMAGE STUFF ---*/
+
+/* IMAGE STUFF */
 
 img.frame {
     border-image: url('//s3-us-west-2.amazonaws.com/s.cdpn.io/4273/frame.png') 93 92 87 92 stretch stretch;
