--- a/css/global.css
+++ b/css/global.css
@@ -682,6 +682,7 @@ h4 {
 
 .closebtn {
     text-align: right;
+    padding-right: 20px;
 }
 
 .closebutton {
@@ -692,10 +693,10 @@ h4 {
 .twoButtons {
     text-align: center;
     padding-top: 40px;
-    justify-content: center;
 }
 
 .editButton {
+
     display: inline-block;
     padding: 15px 25px;
     font-size: 24px;
