--- a/css/aboutKalle.css
+++ b/css/aboutKalle.css
@@ -46,7 +46,7 @@ body{
     font-size: 4rem;
     line-height: 1.3;
     font-weight: 500;
-    color: #f1deba;
+    color: var(--color-primary);
     text-align: center;
 }
 
@@ -56,6 +56,17 @@ body{
     display: flex;
 }
 
+.p{
+    color: #f1deba;
+    font-size: 2rem;
+    text-align: justify;
+    max-width: 400rem;
+    margin: 5rem;
+}
+
+.navK {
+    color: #FB991C;
+}
 
 /*----- SOME GLOW BUTTONS -----*/
 
