--- a/css/blog.css
+++ b/css/blog.css
@@ -11,11 +11,34 @@
     text-align: center;
     display: grid;
     grid-gap: 4rem;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(4, 1fr);
+}
+
+.adminGrid {
+    max-width: 50%;
+    padding: 20px;
+    border-radius: 30px;
+    text-align: center;
+    display: grid;
+    grid-gap: 4rem;
+    grid-template-columns: repeat(2, 1fr);
+}
+
+.addNewBlogButton {
+    font-weight: bold;
+    font-size: xx-large;
+    color: white;
+    height: 20vh;
+    margin: 10px;
+    border-radius: 25px;
+    padding: 0 10px 0 10px;
+    background-color: #4CAF50;
+    cursor: pointer;
 }
 
 .card_body {
-    height: 20vh;
+    height: 28vh;
+    min-height: 28vh;
     background: white;
     margin: 10px;
     border-radius: 25px;
@@ -24,6 +47,7 @@
 
 .card_body_open {
     background: white;
+    min-height: 28vh;
     margin: 10px;
     border-radius: 25px;
     padding: 0 10px 0 10px;
@@ -33,10 +57,10 @@
 .card_date {
     font-family: 'Merriweather',
     serif;
-    font-weight: 600;
+    font-weight: 400;
     text-transform: capitalize;
     text-align: left;
-    font-size: 20px;
+    font-size: medium;
     padding-bottom: 20px;
 }
 
@@ -45,12 +69,12 @@
     serif;
     font-weight: 900;
     text-transform: capitalize;
-    font-size: 26px;
+    font-size: x-large;
     padding-bottom: 20px;
 }
 
 .showMoreButton {
-    font-size: 20px;
+    font-size: medium;
     text-decoration-line: underline;
     margin: 20px;
     cursor: grab;
@@ -59,19 +83,23 @@
 p.card_description {
     font-family: 'Merriweather',
     serif;
-    font-size: 22px;
+    font-size: medium;
     height: 40px;
     overflow:hidden;
+    white-space:nowrap;
+    text-overflow: ellipsis;
+    max-width: 300px;
 }
 
 p.card_description_open {
     font-family: 'Merriweather',
     serif;
-    font-size: 22px;
+    min-height: 40px;
+    font-size: medium;
 }
 
 p.card_author {
-    font-size: 15px;
+    font-size: medium;
     padding-top: 15px;
 
 }
