--- a/css/blog.css
+++ b/css/blog.css
@@ -48,6 +48,7 @@
 .card_body {
     height: 28vh;
     width: 32vh;
+    max-width: 32vh;
     min-height: 28vh;
     min-width: 32vh;
     background: white;
@@ -59,6 +60,8 @@
 .card_body_open {
     background: white;
     min-height: 28vh;
+    max-width: 32vh;
+    min-width: 32vh;
     margin: 10px;
     border-radius: 25px;
     padding: 0 10px 0 10px;
@@ -112,6 +115,7 @@ p.card_description_open {
 p.card_author {
     font-size: medium;
     padding-top: 15px;
+    padding-bottom: 15px;
 
 }
 
